<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.sunbird</groupId>
  <artifactId>lms-service</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
	<maven.compiler.release>11</maven.compiler.release>
	<maven.compiler.source>11</maven.compiler.source>
	<maven.compiler.target>11</maven.compiler.target>
	<sonar.projectKey>sunbird-lms-service</sonar.projectKey>
	<sonar.organization>nivetha-m</sonar.organization>
	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	<sonar.login>e9551b5d61cba3d58cc86fc94ba0148717786c67</sonar.login>
	<sonar.coverage.jacoco.xmlReportPaths>./report-aggregate/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
  </properties>

  <modules>
      <module>core</module>
      <module>service</module>
	  <module>controller</module>
      <module>reports</module>
  </modules>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <argLine>
                        @{argLine} --illegal-access=permit
                    </argLine>
                    <properties>
                        <property>
                            <name>parallel</name>
                            <value>methods</value>
                        </property>
                        <property>
                            <name>dataproviderthreadcount</name>
                            <value>30</value>
                        </property>
                    </properties>
                </configuration>
            </plugin>
		<plugin>
		  <groupId>org.jacoco</groupId>
		  <artifactId>jacoco-maven-plugin</artifactId>
		  <version>0.8.8</version>
		  <executions>
		    <execution>
		      <goals>
			<goal>prepare-agent</goal>
		      </goals>
		    </execution>
		    <execution>
		      <id>report</id>
		      <goals>
			<goal>report</goal>
		      </goals>
		      <phase>verify</phase>
		    </execution>
		  </executions>
		</plugin>
        </plugins>
    </build>
</project>
